--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="card purple">
 
             <header class="card-header">
-                <img src="blog-3.jpeg">
+                <img src="./images/blog-3.jpeg">
 
                 <div>
                         <h3>Danniel cliffhord1</h3>
@@ -31,7 +31,7 @@
         <div class="card purple">
 
             <header class="card-header">
-                <img src="blog-2.jpeg">
+                <img src="./images/blog-2.jpeg">
 
                 <div>
                         <h3>Danniel cliffhord2</h3>
@@ -50,7 +50,7 @@
         <div class="card purple">
 
             <header class="card-header">
-                <img src="blog-1.jpeg">
+                <img src="./images/blog-1.jpeg">
 
                 <div>
                         <h3>Danniel cliffhord3</h3>
@@ -69,7 +69,7 @@
         <div class="card purple">
 
             <header class="card-header">
-                <img src="blog-3.jpeg">
+                <img src="./images/blog-3.jpeg">
 
                 <div>
                         <h3>Danniel cliffhord4</h3>
@@ -89,7 +89,7 @@
         <div class="card purple">
 
             <header class="card-header">
-                <img src="blog-1.jpeg">
+                <img src="./images/blog-1.jpeg">
 
                 <div>
                         <h3>Danniel cliffhord5</h3>
